# SPLed

./: .env  .flake8  .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  KConfig  LICENSE  Pipfile  README.md  bootstrap.json  bootstrap.ps1  bootstrap.py  build.bat  build.ps1  cmock-config.yml  conf.py  coverage.rst  cppcheck.cmake  dependencies.json  git-settings.ps1  index.rst  install-mandatory.bat  install-optional.bat  install-spl.ps1  install.ps1  pyproject.toml  pytest.ini  references.rst  requirements.txt  scoopfile.json  setProxy.ps1  setup.cfg  spl.bat  test.ps1  west.yaml  west.yml  yanga.ps1
.github/workflows/: test.yml
.west/: config
cmake/: common.cmake
cmake/test/: spl_test.cmake
doc/: Doxyfile.in  build.md  design.rst  index.rst  test_report_template.txt  unitTesting.md
doc/ai_example/: index.rst
doc/common/: index.rst
doc/common/customer_requirements/: index.rst
doc/common/sw_architecture/: index.rst
doc/common/variants/: index.rst
doc/components/: index.rst
doc/customer_requirements/: index.rst
doc/results/: index.rst
doc/software_architecture/: index.rst
doc/software_requirements/: index.rst
doc/variants/: index.rst
legacy/platform_a/: parts.cmake
legacy/platform_a/some_folder/: some_func.c  some_func.h
legacy/platform_a/some_other_folder/: some_func_other.c  some_func_other.h
modules/not-a-submodule-extension/: .gitignore  index.cmake
modules/spl/: .gitignore  README.md  dependencies.json  pytest.ini
modules/spl-extension-example/: KConfig  README.md  pytest.ini
modules/spl/cmake/: conan.cmake  kconfig.cmake  spl.cmake
modules/spl/powershell/: spl-functions.ps1  spl.ps1
modules/spl/tests/: test_directory_tracker.py  test_kconfig.py  test_spl.py  test_variant.py
modules/spl_extension_zip/: KConfig  index.cmake  readme.md
modules/spl_extension_zip/src/: my_extension.py
modules/spl_extension_zip/test/: test_cmake_file.py  test_generated_file.py  test_my_extension.py  test_my_extension_config.py
powershell/: include.ps1
powershell/test/: spl-functions.Tests.ps1
src/brightness_controller/: CMakeLists.txt
src/brightness_controller/doc/: index.rst
src/brightness_controller/src/: brightness_controller.c  brightness_controller.h
src/brightness_controller/test/: test_brightness_controller.cc
src/cmake/: index.cmake
src/common/: cmake.py  common.py
src/console_interface/: CMakeLists.txt
src/console_interface/src/: console_interface.c  console_interface.h
src/creator/: creator.py  workspace_artifacts.py
src/examples/component_a/: CMakeLists.txt
src/keyboard_interface/: CMakeLists.txt
src/keyboard_interface/doc/: index.rst
src/keyboard_interface/src/: keyboard_interface.c  keyboard_interface.h
src/keyboard_interface/test/: test_keyboard_interface.cc
src/light_controller/: CMakeLists.txt  KConfig
src/light_controller/doc/: index.rst
src/light_controller/src/: light_controller.c  light_controller.h
src/light_controller/test/: test_light_controller.cc
src/main/: CMakeLists.txt  config.cmake  parts.cmake
src/main/src/: main.c
src/main_control_knob/: CMakeLists.txt
src/main_control_knob/doc/: index.rst
src/main_control_knob/src/: main_control_knob.c  main_control_knob.h
src/main_control_knob/test/: test_main_control_knob.cc
src/power_signal_processing/: CMakeLists.txt
src/power_signal_processing/doc/: index.rst
src/power_signal_processing/src/: power_signal_processing.c  power_signal_processing.h
src/power_signal_processing/test/: test_power_signal_processing.cc
src/rte/: CMakeLists.txt
src/rte/src/: rte.c  rte.h
src/spled/: CMakeLists.txt
src/spled/doc/: index.rst
src/spled/src/: spled.c  spled.h
src/spled/test/: test_spled.cc
test/: test_build.py  test_unittests.py  utils.py
test/Base/Dev/: test__Base_Dev.py
test/CustA/Disco/: test_CustA__Disco.py  test__CustA_Disco.py
test/CustB/Sleep/: test_CustB__Sleep.py  test__CustB_Sleep.py
tests/: test_creator.py  test_example.py  utils.py
tools/: spl_cmake_generator.py
tools/scripts/: deploy-reports.ps1
tools/spl/: .gitignore  README.md  dependencies.json
tools/spl/cmake/: common.cmake  spl.cmake
tools/spl/doc/: build.md  debugging.md  import.md  legacyToConfigurable.md  usecases.md
tools/spl/powershell/: install-scoop.ps1  spl-functions.ps1  spl-variables.ps1  (+1 more)
variants/: config.h.in  yanga.yaml
(+79 files in other folders)
